--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <h2 class="text-2xl font-bold text-blue-500 mb-3">Yeayyy 😆</h2>
             <p class="text-gray-700 mb-6">Aku udah tau kamu bakal mau, klik link ini buat ke secreet room</p>
             <div class="flex gap-3 justify-center">
-                <button id="goChat"
+                <a id="goChat" href="https://www.free4talk.com/room/sjeidjdksm"
                     class="px-5 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-xl font-semibold transition transform hover:scale-105">Gass
-                    let's go 💬</button>
+                    let's go 💬</a>
             </div>
         </div>
     </div>
@@ -130,7 +130,7 @@
 
         yesBtn.onclick = () => { modal.classList.remove("hidden"); modal.classList.add("flex") };
         closeModal.onclick = () => { modal.classList.add("hidden"); modal.classList.remove("flex") };
-        goChat.onclick = () => { window.location.href = "https://wa.me/6281234567890" };
+        goChat.onclick = () => { window.location.href = "https://www.free4talk.com/room/sjeidjdksm" };
     </script>
 </body>
 
