--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 class="px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white rounded-2xl text-lg font-semibold shadow-lg transition transform hover:scale-110">Mau
                 Ngobrol 😃</button>
             <button id="noBtn"
-                class="px-6 py-3 bg-gray-200 text-gray-700 rounded-2xl text-lg font-semibold shadow-lg">Tidak Mau
+                class="px-6 py-3 bg-gray-200 text-gray-700 rounded-2xl text-lg font-semibold shadow-lg cursor-not-allowed">Tidak
+                Mau
                 😤</button>
         </div>
 
